-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17.0.7, 17.0.7-oracle
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8308083 | 17.0.9-oracle | Ludvig Janiuk | P3 | Resolved | Fixed | b01 |
#-----testdescription-----
$file=/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk-17.0.8+1-120/src.full/open/test/langtools/tools/javac/lambda/LambdaParserTest.java
$root=/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk-17.0.8+1-120/src.full/open/test/langtools
keywords=bug7115050 bug8003280 bug8005852 bug8006694 bug8129962
library=/tools/javac/lib
modules=jdk.compiler/com.sun.tools.javac.api jdk.compiler/com.sun.tools.javac.file jdk.compiler/com.sun.tools.javac.util
run=USER_SPECIFIED build combo.ComboTestHelper\nUSER_SPECIFIED main LambdaParserTest\n
source=LambdaParserTest.java
title=Add lambda tests Add parser support for lambda expressions temporarily workaround combo tests are causing time out in several platforms
#-----environment-----
#-----testresult-----
description=file\:/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk-17.0.8+1-120/src.full/open/test/langtools/tools/javac/lambda/LambdaParserTest.java
elapsed=10539 0\:00\:10.539
end=Wed Mar 15 07\:57\:15 GMT 2023
environment=regtest
execStatus=Error. Agent communication error\: java.io.EOFException; check console log for any additional details
harnessLoaderMode=Classpath Loader
harnessVariety=Full Bundle
hostname=jpg-mac-arm-74.oraclecorp.com
javatestOS=Mac OS X 12.2 (aarch64)
javatestVersion=6.0-ea+b14-2020-11-04
jtregVersion=jtreg 6 1
modules=jdk.compiler/com.sun.tools.javac.api jdk.compiler/com.sun.tools.javac.file jdk.compiler/com.sun.tools.javac.util
script=com.sun.javatest.regtest.exec.RegressionScript
sections=script_messages build build compile main
start=Wed Mar 15 07\:57\:04 GMT 2023
test=tools/javac/lambda/LambdaParserTest.java
testJDK=/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk-17.0.8+1-120/macosx-aarch64.jdk/jdk-17.0.8.jdk/Contents/Home
totalTime=10540
user.name=mach5-one
work=/System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S119861/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/a8d53347-0028-45ce-a4d5-1698cacaa34d/runs/d358bb98-da57-4175-9575-5a7f9cd396b8/testoutput/test-support/jtreg_open_test_langtools_tier1/tools/javac/lambda
//call stack
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x000000010656bc94, pid=25879, tid=27651
#
# JRE version: Java(TM) SE Runtime Environment (17.0.8+1) (build 17.0.8-ea+1-LTS-120)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (17.0.8-ea+1-LTS-120, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-aarch64)
# Problematic frame:
# V [libjvm.dylib+0x75fc94] _ZNK6Method26is_method_handle_intrinsicEv+0x8
--------------- T H R E A D ---------------
Current thread (0x000000012100de00): GCTaskThread "GC Thread#7" [stack: 0x000000016f224000,0x000000016f427000] [id=27651]
Stack: [0x000000016f224000,0x000000016f427000], sp=0x000000016f426bd0, free space=2058k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x75fc94] _ZNK6Method26is_method_handle_intrinsicEv+0x8
V [libjvm.dylib+0x78e638] _ZN7nmethod12is_unloadingEv+0x68
V [libjvm.dylib+0x2df328] _ZN13nmethodBucket18next_not_unloadingEv+0x84
V [libjvm.dylib+0x2df814] _ZN17DependencyContext26clean_unloading_dependentsEv+0x4c
V [libjvm.dylib+0x44b430] _ZN13InstanceKlass24clean_dependency_contextEv+0x20
V [libjvm.dylib+0x78dac8] _ZN7nmethod18flush_dependenciesEb+0xd8
V [libjvm.dylib+0x78d784] _ZN7nmethod13make_unloadedEv+0x78
V [libjvm.dylib+0x7cbb00] _ZN22CodeCacheUnloadingTask4workEj+0x70
V [libjvm.dylib+0x3af348] _ZN22G1ParallelCleaningTask4workEj+0x74
V [libjvm.dylib+0x9bd714] _ZN10GangWorker4loopEv+0x64
V [libjvm.dylib+0x9bd69c] _ZN10GangWorker10initializeEv+0x0
V [libjvm.dylib+0x9165a4] _ZN6Thread8call_runEv+0x128
V [libjvm.dylib+0x7b55c0] _ZL19thread_native_entryP6Thread+0x158
C [libsystem_pthread.dylib+0x7240] _pthread_start+0x94
$file=/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk-17.0.8+1-120/src.full/open/test/langtools/tools/javac/lambda/LambdaParserTest.java
$root=/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk-17.0.8+1-120/src.full/open/test/langtools
keywords=bug7115050 bug8003280 bug8005852 bug8006694 bug8129962
library=/tools/javac/lib
modules=jdk.compiler/com.sun.tools.javac.api jdk.compiler/com.sun.tools.javac.file jdk.compiler/com.sun.tools.javac.util
run=USER_SPECIFIED build combo.ComboTestHelper\nUSER_SPECIFIED main LambdaParserTest\n
source=LambdaParserTest.java
title=Add lambda tests Add parser support for lambda expressions temporarily workaround combo tests are causing time out in several platforms
#-----environment-----
#-----testresult-----
description=file\:/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk-17.0.8+1-120/src.full/open/test/langtools/tools/javac/lambda/LambdaParserTest.java
elapsed=10539 0\:00\:10.539
end=Wed Mar 15 07\:57\:15 GMT 2023
environment=regtest
execStatus=Error. Agent communication error\: java.io.EOFException; check console log for any additional details
harnessLoaderMode=Classpath Loader
harnessVariety=Full Bundle
hostname=jpg-mac-arm-74.oraclecorp.com
javatestOS=Mac OS X 12.2 (aarch64)
javatestVersion=6.0-ea+b14-2020-11-04
jtregVersion=jtreg 6 1
modules=jdk.compiler/com.sun.tools.javac.api jdk.compiler/com.sun.tools.javac.file jdk.compiler/com.sun.tools.javac.util
script=com.sun.javatest.regtest.exec.RegressionScript
sections=script_messages build build compile main
start=Wed Mar 15 07\:57\:04 GMT 2023
test=tools/javac/lambda/LambdaParserTest.java
testJDK=/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk-17.0.8+1-120/macosx-aarch64.jdk/jdk-17.0.8.jdk/Contents/Home
totalTime=10540
user.name=mach5-one
work=/System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S119861/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/a8d53347-0028-45ce-a4d5-1698cacaa34d/runs/d358bb98-da57-4175-9575-5a7f9cd396b8/testoutput/test-support/jtreg_open_test_langtools_tier1/tools/javac/lambda
//call stack
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x000000010656bc94, pid=25879, tid=27651
#
# JRE version: Java(TM) SE Runtime Environment (17.0.8+1) (build 17.0.8-ea+1-LTS-120)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (17.0.8-ea+1-LTS-120, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-aarch64)
# Problematic frame:
# V [libjvm.dylib+0x75fc94] _ZNK6Method26is_method_handle_intrinsicEv+0x8
--------------- T H R E A D ---------------
Current thread (0x000000012100de00): GCTaskThread "GC Thread#7" [stack: 0x000000016f224000,0x000000016f427000] [id=27651]
Stack: [0x000000016f224000,0x000000016f427000], sp=0x000000016f426bd0, free space=2058k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x75fc94] _ZNK6Method26is_method_handle_intrinsicEv+0x8
V [libjvm.dylib+0x78e638] _ZN7nmethod12is_unloadingEv+0x68
V [libjvm.dylib+0x2df328] _ZN13nmethodBucket18next_not_unloadingEv+0x84
V [libjvm.dylib+0x2df814] _ZN17DependencyContext26clean_unloading_dependentsEv+0x4c
V [libjvm.dylib+0x44b430] _ZN13InstanceKlass24clean_dependency_contextEv+0x20
V [libjvm.dylib+0x78dac8] _ZN7nmethod18flush_dependenciesEb+0xd8
V [libjvm.dylib+0x78d784] _ZN7nmethod13make_unloadedEv+0x78
V [libjvm.dylib+0x7cbb00] _ZN22CodeCacheUnloadingTask4workEj+0x70
V [libjvm.dylib+0x3af348] _ZN22G1ParallelCleaningTask4workEj+0x74
V [libjvm.dylib+0x9bd714] _ZN10GangWorker4loopEv+0x64
V [libjvm.dylib+0x9bd69c] _ZN10GangWorker10initializeEv+0x0
V [libjvm.dylib+0x9165a4] _ZN6Thread8call_runEv+0x128
V [libjvm.dylib+0x7b55c0] _ZL19thread_native_entryP6Thread+0x158
C [libsystem_pthread.dylib+0x7240] _pthread_start+0x94
- backported by
-
JDK-8308083 SIGSEGV in Method::is_method_handle_intrinsic
-
- Resolved
-
- relates to
-
JDK-8295724 VirtualMachineError: Out of space in CodeCache for method handle intrinsic
-
- Resolved
-
-
JDK-8299427 VirtualMachineError: Out of space in CodeCache for method handle intrinsic
-
- Resolved
-