8305088: SIGSEGV in Method::is_method_handle_intrinsic

Reviewed-by: mbaesken